--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
     "python-dotenv",
     "pillow>=11.3.0",
     "python-escpos>=3.1",
+    "pyusb"
 ]
 requires-python = ">=3.13"
 readme = "README.md"
