more DM improvements

--- a/env.sample
+++ b/env.sample
@@ -15,6 +15,11 @@ PRINTER_USB_PRODUCT_ID=0x0202
 # Minimum seconds between printed messages from the same node (prevents spam)
 MESSAGE_RATE_LIMIT_SECONDS=60
 
+# Admin Override IDs
+# Comma-separated list of node IDs that bypass rate limits and get "Message Printed" response
+# Example: ADMIN_IDS=1514199596,987654321
+ADMIN_IDS=
+
 MQTT_SRV=mqtt.meshtastic.org
 MQTT_USER=meshdev
 MQTT_PASS=large4cats
