--- a/example-all-in-one/.env.example
+++ b/example-all-in-one/.env.example
@@ -13,6 +13,11 @@ PRINTER_IP=192.168.1.100
 # Minimum seconds between printed messages from the same node (prevents spam)
 MESSAGE_RATE_LIMIT_SECONDS=30
 
+# Admin Override IDs
+# Comma-separated list of node IDs that bypass rate limits and get "Message Printed" response
+# Example: ADMIN_IDS=1514199596,987654321
+ADMIN_IDS=
+
 # MQTT Configuration - Local Mosquitto Broker
 MQTT_SRV=mosquitto
 MQTT_USER=
